# riscv-atomic-emulation-trap

./: Cargo.toml  LICENSE-MIT  README.md  asm.S  assemble.sh  build.rs
.cargo/: config.toml
src/: lib.rs
