[package]
name = "riscv-atomic-emulation-trap"
version = "0.2.0"
edition = "2021"
description = "An atomic emulation trap handler for non atomic RISCV targets."
keywords = ["RISCV", "emulation", "atomic"]
authors = ["Scott Mabin <scott@mabez.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/riscv-atomic-emulation-trap"

[dependencies]
riscv = "0.10.0"
riscv-rt = "0.10.0"

[build-dependencies]
riscv-target = "0.1.2"