[package]
name = "riscv-atomic-emulation-trap"
version = "0.4.0"
edition = "2021"
description = "An atomic emulation trap handler for non atomic RISC-V targets."
keywords = ["riscv", "emulation", "atomic"]
authors = ["Scott Mabin <scott@mabez.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/riscv-atomic-emulation-trap"

[dependencies]
